--- a/website/supplier1.html
+++ b/website/supplier1.html
@@ -9,45 +9,45 @@
 			margin-top: 45px;
 		}
 
-		.left_part{
+		.left_part {
 			margin-top: 50px;
 			margin-left: 120px;
 		}
 
-		.input_b_name{
-		    padding: 10px;
-		    padding-right: 138px;
+		.input_b_name {
+			padding: 10px;
+			padding-right: 138px;
 		}
 
-		.input_b_pn{
-		    padding: 10px;
-		    padding-right: 70px;
+		.input_b_pn {
+			padding: 10px;
+			padding-right: 70px;
 		}
 
-		.input_b_education{
-		    padding: 10px;
-		    padding-right: 105px;
+		.input_b_education {
+			padding: 10px;
+			padding-right: 105px;
 		}
 
-		.input_b_wp{
-		    padding: 10px;
-		    padding-right: 30px;
+		.input_b_wp {
+			padding: 10px;
+			padding-right: 30px;
 		}
 
-		.input_btn{
+		.input_btn {
 			margin-top: 10px;
 			margin-left: 50px;
 		}
 
-		.input_b_qafe{
+		.input_b_qafe {
 			margin: 10px;
 		}
 
-		#key_qafe{
+		#key_qafe {
 			margin-left: 10px;
 		}
 
-		#query_ethereum{
+		#query_ethereum {
 			margin-left: 10px;
 		}
 
@@ -78,8 +78,8 @@
 		/* Modal Content */
 		.modal-content {
 			background-color: #fefefe;
-			margin: auto;left_part
-			padding: 20px;
+			margin: auto;
+			left_part padding: 20px;
 			border: 1px solid #888;
 			width: 80%;
 		}
@@ -173,12 +173,12 @@
 		<p>Additional info:</p>
 		<p>This is the link to the contract on the Goerli test net:
 		</p>
-			<a
-				href="https://goerli.etherscan.io/address/0x789e9750BBA7E92f5A4a2e752bcc2c47485929E9">https://goerli.etherscan.io/address/0x789e9750BBA7E92f5A4a2e752bcc2c47485929E9</a>
-			<script>
+		<a
+			href="https://goerli.etherscan.io/address/0x789e9750BBA7E92f5A4a2e752bcc2c47485929E9">https://goerli.etherscan.io/address/0x789e9750BBA7E92f5A4a2e752bcc2c47485929E9</a>
+		<script>
 
+			var web3 = new Web3('ws://localhost:7545');
 
-		var web3 = new Web3(Web3.givenProvider || "ws://ropsten.infura.io/v3/6d785757971742a5a841898f704604fc");
 			var abi = [
 				{
 					"constant": false,
@@ -274,9 +274,7 @@
 				}
 			];
 
-			ethereum.enable()
-
-			var mycontract = new web3.eth.Contract(abi, '0x789e9750BBA7E92f5A4a2e752bcc2c47485929E9');
+			var mycontract = new web3.eth.Contract(abi, '0x02f378FbAF7d546240978596213C4c09Ad705a85');
 
 			async function query_ethereum() {
 
@@ -338,7 +336,7 @@
 				var array = await web3.eth.getAccounts();
 				web3.eth.defaultAccount = array[0];
 
-				mycontract.methods.store($("#key_name").val(), $("#key_phone_number").val(), $("#key_education").val(), $("#key_working_experience").val()).send({ from: web3.eth.defaultAccount }).then(function (response) {
+				mycontract.methods.store($("#key_name").val(), $("#key_phone_number").val(), $("#key_education").val(), $("#key_working_experience").val()).send({ from: web3.eth.defaultAccount, gas: '1000000' }).then(function (response) {
 					$("#wichtig").empty()
 					$("#wichtig").append(`<p>Your data was recorded on the Ethereum blockain. You can check it out by following this link. Click the "Click to see More" button to expand the view. Then, go to "Input Data:" and select "UTF-8" at the drop-down field "View Input As" to query the recorded data on the Ethereum blockchain:</p>`);
 					$("#wichtig").append(`<a id="lets">https://goerli.etherscan.io/tx/${response.transactionHash}</a>`);
