--- a/website/employee.html
+++ b/website/employee.html
@@ -114,7 +114,7 @@
 		}
 
 		body {
-			background-image: url('image_supplier1');
+			background-image: url('image_employee');
 			/* Source: iStockPhoto */
 			background-repeat: no-repeat;
 			background-size: 750px;
