--- a/website/employer.html
+++ b/website/employer.html
@@ -108,7 +108,7 @@
 		}
 
 		body {
-			background-image: url('image_manufacturer1');
+			background-image: url('image_employer');
 			/* Source: iStockPhoto */
 			background-repeat: no-repeat;
 			background-size: 550px;
