--- a/website/employer.html
+++ b/website/employer.html
@@ -134,10 +134,10 @@
 	</h3>
 
 	<div class="left_part">
-		<b class="input_b_fetch_from_eth">Fetch Asset Data from Ethereum to Hyperledger</b><br><br>
-		<input id="input_eth_to_hf" type="text" placeholder="Type in the key of asset!"><br></br>
+		<b class="input_b_fetch_from_eth">Fetch Candidate Information from Ethereum to Hyperledger</b><br><br>
+		<input id="input_eth_to_hf" type="text" placeholder="Type in name of CV"><br></br>
 		<input id="copy_ethereum_to_hyperledger" type="submit"
-			value="Click to fetch asset data from Ethereum to Hyperledger!" onclick="copy_2()"><br></br><br></br>
+			value="Click to fetch data from Ethereum to Hyperledger!" onclick="copy_2()"><br></br><br></br>
 
 		<b class="input_b_name">Name</b>
 		<input id="key_name" type="text" placeholder="Name"><br></br>
@@ -152,10 +152,10 @@
 		<input id="key_working_experience" type="text" placeholder="Working experience"><br></br>
 
 		<input class="input_additional_data" id="invoke_hyperledger" type="submit"
-			value="Click to log additional asset data to Hyperledger!" onclick="invoke_hyperledger()"><br></br><br></br>
+			value="Click to log additional data to Hyperledger!" onclick="invoke_hyperledger()"><br></br><br></br>
 
-		<input name="key" id="input_query_hf" type="text" placeholder="Type in the key of asset!"><br></br>
-		<input id="query_hyperledger" type="submit" value="Click to query asset data from Hyperledger!"
+		<input name="key" id="input_query_hf" type="text" placeholder="Type in name of CV"><br></br>
+		<input id="query_hyperledger" type="submit" value="Click to query data from Hyperledger!"
 			onclick="query_hyperledger()"><br></br><br></br>
 	</div>
 
