--- a/website/employee.html
+++ b/website/employee.html
@@ -151,12 +151,12 @@
 		<b class="input_b_wp">Working experience</b>
 		<input id="key_working_experience" type="text" placeholder="Working experience"><br></br>
 
-		<input class="input_btn" id="invoke_ethereum" type="submit" value="Click to log asset data to Ethereum!"
+		<input class="input_btn" id="invoke_ethereum" type="submit" value="Click to log data to Ethereum!"
 			onclick="invoke_ethereum()"><br></br><br></br>
 
 		<b class="input_b_qafe"> Query data from Ethereum</b><br><br>
-		<input name="key" id="key_qafe" type="text" placeholder="Type in the key of asset!"><br></br>
-		<input id="query_ethereum" type="submit" value="Click to query asset data from Ethereum!"
+		<input name="key" id="key_qafe" type="text" placeholder="Type in name of CV"><br></br>
+		<input id="query_ethereum" type="submit" value="Click to query data from Ethereum!"
 			onclick="query_ethereum()">
 		<br></br><br></br>
 		<!-- The Modal -->
@@ -170,11 +170,6 @@
 
 		</div>
 
-		<p>Additional info:</p>
-		<p>This is the link to the contract on the Goerli test net:
-		</p>
-		<a
-			href="https://goerli.etherscan.io/address/0x789e9750BBA7E92f5A4a2e752bcc2c47485929E9">https://goerli.etherscan.io/address/0x789e9750BBA7E92f5A4a2e752bcc2c47485929E9</a>
 		<script>
 
 			var web3 = new Web3('ws://localhost:7545');
