--- a/website/employer.html
+++ b/website/employer.html
@@ -268,7 +268,8 @@
 		];
 
 		var web3 = new Web3('ws://localhost:7545');
-
+		
+		// replace the contract address here
 		var mycontract = new web3.eth.Contract(abi, '0x02f378FbAF7d546240978596213C4c09Ad705a85');
 
 		function query_hyperledger() {
