--- a/website/employee.html
+++ b/website/employee.html
@@ -267,7 +267,8 @@
 			];
 
 			var web3 = new Web3('ws://localhost:7545');
-
+			
+			// replace the contract address here
 			var mycontract = new web3.eth.Contract(abi, '0x02f378FbAF7d546240978596213C4c09Ad705a85');
 
 			async function query_ethereum() {
